:pear: feat: add `Caddy`

--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
 	"scripts": {
 		"dev": "vite",
 		"serve": "vite",
-		"build:dev": "vue-tsc --noEmit && vite build --mode development",
-		"build:test": "vue-tsc --noEmit && vite build --mode test",
-		"build:pro": "vue-tsc --noEmit && vite build --mode production",
+		"build:dev": "vite build --mode development",
+		"build:test": "vite build --mode test",
+		"build:pro": "vite build --mode production",
 		"preview": "vite preview",
 		"lint:eslint": "eslint --fix --ext .js,.ts,.vue ./src",
 		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
 		"lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
 		"lint:lint-staged": "lint-staged",
-		"prepare": "husky install",
 		"release": "standard-version",
 		"commit": "git pull && git add -A && git-cz && git push"
 	},
@@ -56,7 +55,6 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-vue": "^9.4.0",
-		"husky": "^8.0.1",
 		"lint-staged": "^12.4.2",
 		"postcss": "^8.4.14",
 		"postcss-html": "^1.4.1",
