--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,7 @@
 		"serve": "vite",
 		"build:dev": "vite build --mode development",
 		"build:test": "vite build --mode test",
-		"build:pro": "vite build --mode production",
+		"build:pro": "vite build --mode production && mv dist/admin/assets dist && rm -fr dist/admin",
 		"preview": "vite preview",
 		"lint:eslint": "eslint --fix --ext .js,.ts,.vue ./src",
 		"lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
@@ -32,7 +32,7 @@
 		"pinia": "^2.0.12",
 		"pinia-plugin-persistedstate": "^1.6.1",
 		"qs": "^6.11.0",
-		"vite": "^2.8.0",
+		"vite": "^2.9.17",
 		"vue": "^3.2.25",
 		"vue-i18n": "^9.1.9",
 		"vue-router": "^4.0.12",
